--- a/runelite-client/src/main/resources/net/runelite/client/plugins/roofremoval/overrides.jsonc
+++ b/runelite-client/src/main/resources/net/runelite/client/plugins/roofremoval/overrides.jsonc
@@ -3834,5 +3834,15 @@
         "z1": 0,
         "z2": 0
     }
- ]
+  ],
+  "11062": [ // Camelot Castle
+    {
+      "rx1": 0,
+      "ry1": 40,
+      "rx2": 12,
+      "ry2": 44,
+      "z1": 1,
+      "z2": 1
+    }
+  ]
 }
