roof removal: Add Karuulm Slayer Dungeon overrides

--- a/runelite-client/src/main/resources/net/runelite/client/plugins/roofremoval/overrides.jsonc
+++ b/runelite-client/src/main/resources/net/runelite/client/plugins/roofremoval/overrides.jsonc
@@ -3844,5 +3844,55 @@
       "z1": 1,
       "z2": 1
     }
+  ],
+  "5279": [ // Karuulm Slayer Dungeon
+    {
+      "rx1": 1,
+      "ry1": 16,
+      "rx2": 3,
+      "ry2": 18,
+      "z1": 1,
+      "z2": 1
+    },
+    {
+      "rx1": 5,
+      "ry1": 20,
+      "rx2": 8,
+      "ry2": 23,
+      "z1": 1,
+      "z2": 1
+    },
+    {
+      "rx1": 32,
+      "ry1": 0,
+      "rx2": 35,
+      "ry2": 2,
+      "z1": 1,
+      "z2": 1
+    },
+    {
+      "rx1": 41,
+      "ry1": 37,
+      "rx2": 43,
+      "ry2": 39,
+      "z1": 1,
+      "z2": 1
+    },
+    {
+      "rx1": 44,
+      "ry1": 51,
+      "rx2": 47,
+      "ry2": 53,
+      "z1": 1,
+      "z2": 1
+    },
+    {
+      "rx1": 59,
+      "ry1": 51,
+      "rx2": 61,
+      "ry2": 57,
+      "z1": 1,
+      "z2": 1
+    }
   ]
 }
