gpu: use lwjgl-opencl

--- a/runelite-client/pom.xml
+++ b/runelite-client/pom.xml
@@ -149,27 +149,6 @@
 			<version>1.3</version>
 		</dependency>
 
-		<!-- JOCL -->
-		<dependency>
-			<groupId>net.runelite.jocl</groupId>
-			<artifactId>jocl</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>net.runelite.jocl</groupId>
-			<artifactId>jocl</artifactId>
-			<version>1.0</version>
-			<classifier>macos-x64</classifier>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>net.runelite.jocl</groupId>
-			<artifactId>jocl</artifactId>
-			<version>1.0</version>
-			<classifier>macos-arm64</classifier>
-			<scope>runtime</scope>
-		</dependency>
-
 		<!-- lwjgl core -->
 		<dependency>
 			<groupId>org.lwjgl</groupId>
@@ -240,6 +219,12 @@
 			<artifactId>lwjgl-opengl</artifactId>
 			<classifier>natives-windows</classifier>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!-- lwjgl opencl -->
+		<dependency>
+			<groupId>org.lwjgl</groupId>
+			<artifactId>lwjgl-opencl</artifactId>
 		</dependency>
 
 		<dependency>
