--- a/runelite-client/pom.xml
+++ b/runelite-client/pom.xml
@@ -146,7 +146,7 @@
 		<dependency>
 			<groupId>net.runelite</groupId>
 			<artifactId>rlawt</artifactId>
-			<version>1.3</version>
+			<version>1.4</version>
 		</dependency>
 
 		<!-- lwjgl core -->
@@ -184,6 +184,12 @@
 			<classifier>natives-windows</classifier>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.lwjgl</groupId>
+			<artifactId>lwjgl</artifactId>
+			<classifier>natives-windows-arm64</classifier>
+			<scope>runtime</scope>
+		</dependency>
 
 		<!-- lwjgl opengl -->
 		<dependency>
@@ -218,6 +224,12 @@
 			<groupId>org.lwjgl</groupId>
 			<artifactId>lwjgl-opengl</artifactId>
 			<classifier>natives-windows</classifier>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.lwjgl</groupId>
+			<artifactId>lwjgl-opengl</artifactId>
+			<classifier>natives-windows-arm64</classifier>
 			<scope>runtime</scope>
 		</dependency>
 
