script assembler: add symbol support
Use components for symbols and replace the hardcoded component id in CombatInterfaceSP with one

--- a/runelite-client/pom.xml
+++ b/runelite-client/pom.xml
@@ -426,6 +426,7 @@
 						<configuration>
 							<scriptDirectory>src/main/scripts</scriptDirectory>
 							<outputDirectory>${project.build.outputDirectory}/runelite</outputDirectory>
+							<componentsFile>../runelite-api/src/main/interfaces/interfaces.toml</componentsFile>
 						</configuration>
 					</execution>
 					<execution>
