roof removal: Add Mage Training Arena override

--- a/runelite-client/src/main/resources/net/runelite/client/plugins/roofremoval/overrides.jsonc
+++ b/runelite-client/src/main/resources/net/runelite/client/plugins/roofremoval/overrides.jsonc
@@ -4336,5 +4336,15 @@
       "z1": 1,
       "z2": 1
     }
+  ],
+  "13363": [ // Mage Training Arena
+    {
+      "rx1": 31,
+      "ry1": 50,
+      "rx2": 39,
+      "ry2": 58,
+      "z1": 1,
+      "z2": 1
+    }
   ]
 }
