Update macOS fullscreen support and Lombok configuration - Modernize macOS fullscreen support using java.awt.Window API - Update Lombok configuration in pom.xml files - Fix compiler plugin configuration for annotation processing - Update OSXUtil to use modern Taskbar API for user attention

--- a/pom.xml
+++ b/pom.xml
@@ -185,8 +185,16 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
 				<configuration>
 					<release>11</release>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 			<plugin>
