--- a/rlbot/requirements.txt
+++ b/rlbot/requirements.txt
@@ -1,16 +1,15 @@
-gymnasium==0.29.1
+gymnasium>=0.29.1
 types-gymnasium>=0.29.1
-numpy>=1.24.3
-websockets==12.0
-stable-baselines3[extra]>=2.1.0
-torch>=2.1.0
+numpy>=1.26.0
+websockets>=12.0
+stable-baselines3>=2.2.1
+torch>=2.2.0
 opencv-python>=4.8.0
 pillow>=10.0.0
 pandas>=2.0.3
 matplotlib>=3.7.2
-nest-asyncio>=1.5.8
+nest-asyncio>=1.6.0
 types-nest-asyncio>=1.5.8
-tensorboard>=2.15.0
 tqdm>=4.66.0
 rich>=13.7.0
 types-websockets>=12.0.0
